[project]
name = "responsive-warehouse"
version = "0.1.0"
description = "Latency-aware multi-agent RL warehouse simulator"
readme = "README.md"
authors = [
    { name = "Xiaole Su", email = "suxiaole0223@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
responsive-warehouse = "responsive_warehouse:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

# ruff
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes (basic correctness)
    "I",             # isort (import ordering)
    "N",             # pep8-naming
    "UP",            # pyupgrade (modern Python idioms)
    "B",             # bugbear (likely-bug patterns)
    "SIM",           # simplify (refactor suggestions)
    "RUF",           # ruff-specific rules
    "ANN",           # annotations (forces type hints)
    "D",             # pydocstyle (docstrings)
]
ignore = [
    "D100", "D104",  # missing module/package docstring (too noisy at start)
    "ANN401",        # we'll allow `Any` sparingly
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]   # tests don't need full docstrings/annotations

# mypy
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["yaml.*"]   # pyyaml has incomplete stubs
ignore_missing_imports = true

# pytest
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",                  # show summary of skipped/failed
    "--strict-markers",     # typo-d marker → error, not silent skip
    "--strict-config",
    "-q",                   # quieter output
]